k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: comin-authentication-service
  namespace: comin
spec:
  selector:
    app: comin-authentication-service
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
